--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>DemoApp</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+  <head>
+    <title><%=	yield(:title)	%>	|	Demo App</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <header	class="navbar	navbar-fixed-top	navbar-inverse">
+  						<div	class="container">
+  								<%=	link_to	"Demo App",	root_path ,	id:	"logo"	%>	
+  								<nav>
+  										<ul	class="nav	navbar-nav	navbar-right">
+  												<li><%=	link_to	"Home",			"#"	%></li>
+  												<li><%=	link_to	"Log	in",	"#"	%></li>
+  										</ul>
+  								</nav>
+  						</div>
+  	</header>
+  	  <%=	render	'layouts/header'	%>
+  		<div	class="container">
+  			  <%=	yield	%>
+  		<%=	render	'layouts/footer'	%>
+  		</div>
+  </body>
 </html>
