--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer	class="footer">
 		<small>
 		  <p>
-				Find the Code of this Demo App <a	href="https://github.com/noor-framgia/DemoApp">here</a>
+				<!--Find the Code of this Demo App <a	href="https://github.com/noor-framgia/DemoApp">here</a>-->
 			</p>
 		</small>
 	
