--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -17,7 +17,25 @@
 <!--				</p>-->
 <!--		</body>-->
 <!--</html>-->
-
+<% if logged_in? %>
+	<div class="row">
+		<aside class="col-md-4">
+			<section class="user_info">
+				<%= render 'shared/user_info' %>
+			</section>
+			<section class="stats">
+				<%= render 'shared/stats' %>
+			</section>
+			<section class="micropost_form">
+				<%= render 'shared/micropost_form' %>
+			</section>
+		</aside>
+		<div class="col-md-4">
+			<h3>Micropost Feed</h3>
+			<%= render 'shared/feed' %>
+		</div>
+	</div>
+<% else %>
 <div	class="center	jumbotron">
 		<h1>Framgia Demo Blog</h1>
 		<h2>
@@ -25,4 +43,5 @@
 		</h2>
 		<%=	link_to	"Sign	up",	signup_path ,	class:	"btn	btn-lg	btn-primary"	%>
 </div>
+<% end %>
  
