--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,13 @@
 <li>
-<%= gravatar_for user, size: 50 %>
+<%= gravatar_for user%>
 <%= link_to user.name, user %>
 <% if current_user.admin? && !current_user?(user) %>
 |    <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
 <% end %>
 </li>
+
+
+<%= link_to gravatar_for(current_user), current_user %>
+<h1><%= current_user.name %></h1>
+<span><%= link_to "view my profile", current_user %></span>
+<span><%= pluralize(current_user.microposts.count, "micropost") %></span>
