--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -6,9 +6,11 @@
       </span>
     <span class="timestamp">
       Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+      <li><%= link_to "Comment", "/comments/new?micropost_id=" + micropost.id.to_s  %></li>
       <% if current_user?(micropost.user) %>
         <%= link_to "delete", micropost, method: :delete,
                                          data: { confirm: "You sure?" } %>
       <% end %>
+      
     </span>
 </li>
