Complete the Demo App, User can sign In, Sign Up, Follow and Unfollow any user, See User's post and Comment follwed user's post

--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -3,10 +3,11 @@
     <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
     <span class="content">
       <%= micropost.content %>
-      </span>
+    </span>
+    <%= link_to "show details", micropost_path(micropost.id) %>
     <span class="timestamp">
       Posted <%= time_ago_in_words(micropost.created_at) %> ago.
-      <li><%= link_to "Comment", "/comments/new?micropost_id=" + micropost.id.to_s  %></li>
+      
       <% if current_user?(micropost.user) %>
         <%= link_to "delete", micropost, method: :delete,
                                          data: { confirm: "You sure?" } %>
